modified:   ssiCalculatorAbout.html, to repoint nav link to GitHub Pages

--- a/ssiCalculatorAbout.html
+++ b/ssiCalculatorAbout.html
@@ -71,7 +71,7 @@ header a:hover {
 <body>
 <article>
 <header><h1 class="title">Scottish statutory instrument calculator</h1>
-	<nav><p><a href="versionx.html">calculator</a> || <a>gough.fraser@gmail.com</a></p></nav>
+	<nav><p><a href="ssiCalculator.html">calculator</a> || <a>gough.fraser@gmail.com</a></p></nav>
 </header>
 <div id="bodyTxt">
 <h1>Calculator modes</h1>
