--- a/ssiCalculator.html
+++ b/ssiCalculator.html
@@ -3,343 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-html {
-	height:100%;
-}
-body {
-    display: flex;
-    flex-direction:column;
-    height:100vh;
-    overflow-x:hidden;
-    background-color:#F5F5F5;
-	color:#192231;
-}
-#appCore {
-	flex: 1 0 auto;
-	padding:20px;
-}
-#footer {
-	flex-shrink:0;
-	padding:20px;
-	border-top: solid 1px;
-	background-color:#A1D6E2;
-}
-#header {
-	flex-shrink:0;
-	padding-top:10px;
-	padding-left:10px;
-	padding-bottom:5px;
-	border-bottom: solid 1px;
-	background-color:#A1D6E2;
-}
-h1 {
-	font-size:2.2vmax;
-	padding:0;
-	margin:0;
-	font-family:"Arial Black";
-	color:#192231;
-}
-#header p {
-	font-size:1.5vmax;
-	padding:0 0 0 1%;
-	margin:0;
-	font-family:"Arial Black";
-	color:#192231;
-}
-#header a {
-	color:#626D71;
-	text-decoration:none;
-}
-#header a:hover {
-	color:#FFFFFF;
-	text-decoration:underline;
-	cursor:pointer;
-}
-.slidable {
-	position:absolute;
-	height:200px;
-	width:90%;
-	margin-top:5%;
-	-webkit-transition: 1s ease-in-out;
-    -moz-transition: 1s ease-in-out;
-    -o-transition: 1s ease-in-out; 
-    transition: 1s ease-in-out;
-}
-.holdLeft {
-    -ms-transform: translate(-150%, 0px); /* IE 9 */
-    -webkit-transform: translate(-150%, 0px); /* Safari */
-    transform: translate(-150%, 0px); /* Standard syntax */
-}
-.holdRight{
-    -ms-transform: translate(200%, 0px); /* IE 9 */
-    -webkit-transform: translate(200%, 0px); /* Safari */
-    transform: translate(200%, 0px); /* Standard syntax */
-}
-.clickable {
-	cursor:pointer;
-	color:#1995AD;
-}
-.clickable:hover {
-	text-decoration:underline;
-}
-.button {
-	border-radius:50%;
-	-webkit-transition: 250ms ease-in-out;
-    -moz-transition: 250ms ease-in-out;
-    -o-transition: 250ms ease-in-out;
-    transition: 250ms ease-in-out;
-}
-.buttonRotated {
-	-ms-transform: rotate(90deg);
-	-webkit-transform:rotate(90deg);
-	transform:rotate(90deg);
-}
-.recessDay {
-	background-color:hsla(0, 100%, 50%, 0.3);
-}
-.cDeskHoliday {
-	background-color:blue;
-}
-.recessDay.cDeskHoliday {
-	background-color:purple;
-}
-table {
-	margin-top:5%;
-	width:50%;
-	height:50%;
-	font-family:Helvetica;
-	color:#192231;
-}
-table a {
-	color:#192231;
-	text-decoration:none;
-}
-th, td {
-	padding:10px;
-	font-size:3vmax;
-	width:50%;
-	text-align:center;
-}
-th {
-	font-weight:normal;
-}	
-#calendarInternal {
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	flex-direction:column;
-	color:#192231;
-	
-}
-#calendarControls {
-	display:flex;
-	align-items:center;
-	justify-content:center;
-}
-select {
-	font-size:3vmax;
-	font-family:Helvetica;
-	border-radius:10%;
-	min-width:50%;
-	text-align:center;
-	background-color:#FFFFFF;
-	color:#192231;
-}
-#appMain {
-	font-family:Helvetica;
-	font-size:4vmax;
-	line-height:1.4;
-	margin-left:1%;
-}
-#appOutput {
-	font-family:Helvetica;
-	font-size:4vmax;
-	line-height:1.4;
-	text-align:center;
-}
-#appOptions {
-	font-family:Helvetica;
-	font-size:2.2vmax;
-	color:#626D71;
-	margin-top:8%;
-}
-#numLayingDays {
-	font-family:Helvetica;
-	font-size:4vmax;
-	width:5vmax;
-	border:none;
-	background-color:#F5F5F5;
-	color:#1995AD;
-}
-#numLayingDays:hover {
-	text-decoration:underline;
-}
-.calFwBack {
-	font-family:Helvetica;
-	font-size:3vmax;
-	border-radius:70%;
-	background-color: #FFFFFF;
-	box-shadow: 0 3px 3px #999;
-}
-.calFwBack:active {
-	box-shadow:0 1px 3px #666;
-	transform: translateY(2px);
-}
-#btnDatBack {
-	margin-right:10%;
-}
-#btnDatFw {
-	margin-left:10%;
-}
-.calendarCol {
-	min-width:14%;
-}
-</style>
-<script>
-function slide() {
-	document.getElementById("appContainer").classList.toggle('holdLeft');
-	document.getElementById("calendarContainer").classList.toggle('holdRight');
-}
-function init() {
-	var txtOutput = "<p>The <span id='mode' class='clickable' onclick='updateAppMain(1)'>latest laying date</span> for an instrument subject to "
-							+ "<span id='procedure' class='clickable' onclick='updateAppMain(2)'>the negative procedure</span>, "
-							+ " that is <span id='laidOrInForce'>to come into force</span> on "
-							+ "<span id='chosenDate' class='clickable' onclick='slide()'>?</span>"
-							+ "<span id='conjunct'></span>"
-							+ " after <input type='text' id='numLayingDays' onkeyup='changeNoOfDays()' value='40' /> laying <span id='wdDays'>days</span> is&nbsp;...</p>";
-	document.getElementById("appMain").innerHTML = txtOutput;
-	setUseClearDays();
-}
-function updateAppMain(change) {
-	if (change == 1) {
-		change = "mode";
-	} else {
-		change = "procedure";
-	}
-	var elemMode = document.getElementById("mode");
-	var elemProc = document.getElementById("procedure");
-	var elemLoF = document.getElementById("laidOrInForce");
-	var elemCon = document.getElementById("conjunct");
-	if (change == "mode") {
-		if (elemMode.innerHTML == "latest laying date") {
-			elemMode.innerHTML = "earliest coming into force date";
-		} else {
-			elemMode.innerHTML = "latest laying date";
-		}
-	} else if (change == "procedure") {
-		if (elemProc.innerHTML == "the negative procedure") {
-			elemProc.innerHTML = "the affirmative procedure";
-		} else if (elemProc.innerHTML == "the affirmative procedure") {
-			elemProc.innerHTML = "the negative procedure";
-		}
-	}
-	if (elemMode.innerHTML == "latest laying date") {
-		elemLoF.innerHTML = "to come into force";
-		elemCon.innerHTML = "";
-	} else if (elemMode.innerHTML == "earliest coming into force date") {
-		if (elemProc.innerHTML == "the negative procedure") {
-			elemLoF.innerHTML = "laid";
-		} else if (elemProc.innerHTML == "the affirmative procedure") {
-			elemLoF.innerHTML = "laid in draft";
-		}
-		elemCon.innerHTML = " and is to come into force ";
-	}
-	if (change == "procedure") {
-		setUseClearDays();
-		var numDays = document.getElementById("numLayingDays");
-		if (elemProc.innerHTML == "the negative procedure" && numDays.value == 56) {
-			numDays.value = 40;
-		} else if (elemProc.innerHTML == "the affirmative procedure" && numDays.value == 40) {
-			numDays.value = 56;
-		}
-	}
-	calculateRelevantDate();
-}
-function changeNoOfDays() {
-	var strValue = document.getElementById("numLayingDays").value;
-	if (isNaN(strValue) == true) {
-		document.getElementById("numLayingDays").value = "";
-	}
-	var elemDays = document.getElementById("wdDays");
-	if (strValue == 1) {
-		elemDays.innerHTML = "day";
-	} else if (elemDays.innerHTML == "day") {
-		elemDays.innerHTML = "days";
-	}
-	setUseClearDays();
-	calculateRelevantDate();
-}
-function setUseClearDays() {
-	var proc = document.getElementById("procedure").innerHTML;
-	var intDays = document.getElementById("numLayingDays").value;
-	if (proc == "the negative procedure" && intDays == 40) {
-		document.getElementById("chkClearDays").checked = false;
-	} else {
-		document.getElementById("chkClearDays").checked = true;
-	}
-}
-function revealOpts() {
-	document.getElementById("btnRevealOpts").classList.toggle("buttonRotated");
-	setTimeout(unhideOpts, 250);
-}
-function unhideOpts() {
-	var divPanel = document.getElementById("optionsPanel");
-	if (divPanel.style.display == 'none') {
-		divPanel.style.display = 'block';
-	} else {
-		divPanel.style.display = 'none';
-	}
-}
-function calFwBack(direction) {
-	var lstMonth = document.getElementById("month");
-	var lstYear = document.getElementById('year');
-	var yearLmt = new Date();
-	if (direction == 0) {
-		yearLmt = parseInt(yearLmt.getFullYear()) - 1;
-		if (lstMonth.value > 0) {
-			lstMonth.value = (parseInt(lstMonth.value) - 1);
-		} else {
-			if (lstYear.value > yearLmt) {
-				lstMonth.value = 11;
-				lstYear.value = parseInt(lstYear.value) - 1;
-			} else {
-				alert('cannot go back further');
-			}
-		}
-	} else {
-		yearLmt =parseInt(yearLmt.getFullYear()) + 1;
-		if (lstMonth.value < 11) {
-			lstMonth.value = (parseInt(lstMonth.value) + 1);
-		} else {
-			if (lstYear.value < yearLmt) {
-				lstMonth.value = 0;
-				lstYear.value = parseInt(lstYear.value) + 1;
-			} else {
-				alert('cannot go further forward');
-			}
-		}
-	}
-	writeCalendar();
-}
-function calBtnsShowHide() {
-	var curYear = new Date();
-	curYear = parseInt(curYear.getFullYear());
-	var earliestDate = String(curYear - 1) + "0";
-	var latestDate = String(curYear + 1) + "11";
-	var selDate = String(document.getElementById("year").value) + String(document.getElementById("month").value);
-	if (selDate == earliestDate) {
-		document.getElementById("btnDatBack").style.visibility = 'hidden';
-		document.getElementById("btnDatFw").style.visibility = 'visible';
-	} else if (selDate == latestDate) {
-		document.getElementById("btnDatFw").style.visibility = 'hidden';
-		document.getElementById("btnDatBack").style.visibility = 'visible';
-	} else {
-		document.getElementById("btnDatBack").style.visibility = 'visible';
-		document.getElementById("btnDatFw").style.visibility = 'visible';
-	}
-}
-</script>
+<link rel="stylesheet" type="text/css" href="ssiCalculator.css">
+<script src="ssiCalculatorDisplay.js"></script>
 </head>
 <body onload="getXML()">
 <div id="header"><h1>Scottish statutory instrument calculator</h1><p><a href="ssiCalculatorAbout.html">about</a> || <a>gough.fraser@gmail.com</a></p></div>
