Safari bug: try swapping order of getXML() and initializeCalendarControls()

--- a/ssiCalculator.html
+++ b/ssiCalculator.html
@@ -8,7 +8,7 @@
 <script src="ssiCalculator.js"></script>
 <script src="ssiCalculatorDisplay.js"></script>
 </head>
-<body onload="getXML()">
+<body onload="initializeCalendarControls()">
 <div id="header"><h1>Scottish statutory instrument calculator</h1><p><a href="ssiCalculatorAbout.html">about</a> || <a>gough.fraser@gmail.com</a></p></div>
 <div id="appCore">
 	<div id="expModal" class="modal">
