--- a/ssiCalculator.html
+++ b/ssiCalculator.html
@@ -13,8 +13,32 @@
 <div id="appCore">
 	<div id="expModal" class="modal">
   		<div class="modal-content">
-    		<span class="modal-close" onclick="closeModal()">&times;</span>
-   		 	<p id="expModalText"></p>
+    		<span class="modal-close" onclick="closeModal(`expModal`)">&times;</span>
+   		 	<div id="expModalText"></div>
+  		</div>
+	</div>
+	<div id="keyModal" class="modal">
+  		<div class="modal-content">
+    		<span class="modal-close" onclick="closeModal(`keyModal`)">&times;</span>
+   		 	<div id="keyModalText">
+   		 		<div class="modalTitle"><p>Key</p></div>
+				<div class="keyLine">
+					<div id="keyRecess" class="keySquare recessDay"></div><div><p>&nbsp;&nbsp;&nbsp;recess day</p></div>
+				</div>
+				<div class="keyLine">
+					<div id="keyCDeskClosed" class="keySquare cDeskHoliday"></div><div><p>&nbsp;&nbsp;&nbsp;day chamber desk is closed</p></div>
+				</div>
+				<div class="keyLine">
+					<div id="keyCDeskHalfDay" class="keySquare cDeskHalfHoliday"></div><div><p>&nbsp;&nbsp;&nbsp;day chamber desk is only open in the morning</p></div>
+				</div>
+   		 	</div>
+  		</div>
+	</div>
+	<div id="errModal" class="modal">
+	  		<div class="modal-content">
+    		<span class="modal-close" onclick="closeModal(`errModal`)">&times;</span>
+    		<div class="modalTitle"><p>Error</p></div>
+   		 	<div id="errModalText"></div>
   		</div>
 	</div>
 	<div id="appContainer">
@@ -38,6 +62,7 @@
 			<select id="month" onchange="writeCalendar()"></select>
 			<select id="year" onchange="writeCalendar()"></select>
 			<input type="button" class="calendarButton" id="btnDatFw" value="&#8594;" onclick="calFwBack(1)"/>
+			<input type="button" class="keyButton" id="btnCalKey" value="?" onclick="openModal('keyModal')"/>
 		</div>
 		<div class="calendarGrid" id="calendarGrid"></div>
 	</div>
