--- a/ssiCalculator.html
+++ b/ssiCalculator.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="ssiCalculatorStandard.css">
 <link rel="stylesheet" type="text/css" href="ssiCalculator.css">
-<script src="ssiCalculator.js"></script>
-<script src="ssiCalculatorDisplay.js"></script>
 </head>
-<body onload="initializeCalendarControls()">
+<body>
 <div id="header"><h1>Scottish statutory instrument calculator</h1><p><a href="ssiCalculatorAbout.html">about</a> || <a>gough.fraser@gmail.com</a></p></div>
 <div id="appCore">
 	<div id="expModal" class="modal">
@@ -67,6 +65,8 @@
 		<div class="calendarGrid" id="calendarGrid"></div>
 	</div>
 </div>
+<script src="ssiCalculatorDisplay.js"></script>
+<script src="ssiCalculator.js"></script>
 <script>init();</script>
 </body>
 </html>
