fixing for IE and Edge

--- a/ssiCalculator.html
+++ b/ssiCalculator.html
@@ -65,6 +65,7 @@
 		<div class="calendarGrid" id="calendarGrid"></div>
 	</div>
 </div>
+<script src="ua-parser.js"></script>
 <script src="ssiCalculatorDisplay.js"></script>
 <script src="ssiCalculator.js"></script>
 <script>init();</script>
