--- a/parliamentary-history-scraper.html
+++ b/parliamentary-history-scraper.html
@@ -3,41 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Bill Document Scraper</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-    }
-    pre {
-      background: #f4f4f4;
-      padding: 10px;
-      border: 1px solid #ccc;
-      white-space: pre-wrap;
-    }
-    label {
-      display: block;
-      margin-bottom: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="parliamentary-history-scraper.css">
+  <script src="parliamentary-history-scraper.js"></script>
 </head>
 <body>
-
-  <h1>Scrape parliamentary history from Local HTML TEST 1</h1>
-
+  <h1>Scrape parliamentary history</h1>
   <label>
     Choose HTML file:
     <input type="file" id="fileInput" accept=".html,.htm" />
   </label>
   <button onclick="scrapeData()">Scrape and Export JSON</button>
-
   <h2>Scraped JSON Output</h2>
-  <pre id="output">Waiting for input...</pre>
+  <pre id="output" class="jsonOutput">Waiting for input...</pre>
+  <div id="publicationsInputs"></div>
   <button onclick="downloadJsonOutput()">Download JSON</button>
-
+  <h2>Operate on output JSON</h2>
+  <label>
+    Choose JSON file:
+    <input type="file" id="jsonFileInput" accept=".json" />
+  </label>
+  <button onclick="buildHtmlTable()">Create tbl</button>
+  <div id="htmlOutput"></div>
+  <button onclick="downloadHtml()">Download HTML</button>
   <script>
-    let htmlContent = "";
-    let leadCommittee = "";
-
     document.getElementById('fileInput').addEventListener('change', function (event) {
       const file = event.target.files[0];
       if (!file) return;
@@ -48,293 +36,18 @@
         document.getElementById('output').textContent = "File loaded. Click 'Scrape and Export JSON'.";
       };
       reader.readAsText(file);
-    });
-
-    function downloadJsonOutput() {
-    // download json results
-      const outputText = document.getElementById('output').textContent;
-      const blob = new Blob([outputText], { type: "application/json" });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = "bill_documents.json"; // Change filename if needed
-      document.body.appendChild(a); // Required for Firefox
-      a.click();
-      document.body.removeChild(a); // Clean up
-      URL.revokeObjectURL(url);     // Free memory
-    }
-
-    function getSuffix(displayName) {
-    // returns reference suffix for formal bill docs
-    const lowerName = displayName.toLowerCase();
-    const rules = [
-      { match: "explanatory notes", suffix: "EN" },
-      { match: "financial memorandum", suffix: "FM" },
-      { match: "revised financial memorandum", suffix: "FM" },
-      { match: "supplementary financial memorandum", suffix: "FM" },
-      { match: "policy memorandum", suffix: "PM" },
-      { match: "delegated powers memorandum", suffix: "DPM" },
-      { match: "supplementary delegated powers memorandum", suffix: "DPM" },
-      { match: "groupings", suffix: "G" },
-      { match: "marshalled list", suffix: "ML" },
-      ];
-    const rule = rules.find(r => lowerName.includes(r.match));
-    return rule ? rule.suffix : null; // or fallback suffix
-    }
-
-		function findConsideringBody(element,stage) {
-    // for proceedings, looks back up the DOM to find which body's proceedings
-      if (stage == 3) {
-      console.log(element.textContent + " stage " + stage)
-        return "Chamber";
-      }
-  		let current = element.previousElementSibling;
-      let nameString = "Unknown"
-		  while (current) {
-		    const tag = current.tagName.toLowerCase();
-		    const isHeading = tag.startsWith('h') && tag.length === 2 && !isNaN(tag[1]);
-   		  if (isHeading && current.textContent.toLowerCase().includes("committee")) {
-          console.log(current.textContent.trim());
-          let nameString = current.textContent.trim();
-          if (nameString.toLowerCase().includes("lead committee")) {
-            nameString = leadCommittee
-          }
-          nameString = nameString.replace(/^[\s\S]*?\bthe\b\s*/i, '');
-		      return nameString; // Found the heading
-        } else if (isHeading && current.textContent.toLowerCase().includes("stage 1 debate")) {
-          return  nameString = "Chamber";
-        }
-	    current = current.previousElementSibling;
-		  }
-  	return nameString; // No matching heading found
-		}
-
-		function formatDateToLongString(dateStr) {
-    // switches ISO date properties to citation format
-			const date = new Date(dateStr);
-			if (isNaN(date)) return null; // Invalid date
-
-			const day = date.getDate(); // returns 1–31
-			const month = date.toLocaleString('en-GB', { month: 'long' }); // "June"
-			const year = date.getFullYear();
-
-			return `${day} ${month} ${year}`;
-		}
-
-    function formatAsIsoDateLocal(date) {
-    // switches extracted dates to local date, to deal with losing hour due to timezone
-      const yyyy = date.getFullYear();
-      const mm = String(date.getMonth() + 1).padStart(2, '0'); // 0-based month
-      const dd = String(date.getDate()).padStart(2, '0');
-      return `${yyyy}-${mm}-${dd}`;
-    }
-
-
-    function getStage(element) {
-    // looks back up the DOM to work out which bill stage an element is within
-      const stageAncestor = element.closest('[id^="target-"]');
-      return stageAncestor ? stageAncestor.id.split("-")[1].trim() : null;
-    }
-
-    function getBillNumSuffix(stage, displayName) {
-    // adds a letter to the number of as-amended bills, e.g. no.A at stage 2, no.B at stage 3 etc.
-      if (!displayName.includes("Marshalled List") && !displayName.includes("Groupings")) {
-        return String.fromCharCode(64 + stage);
-      } else {
-        if (stage === 1) {
-          return "";
-        } else {
-          return String.fromCharCode(64 + (stage - 1))
-        }
-      }
-    }
-
-    async function findBillReferenceByTitle(title) {
-    // gets the bill number by searching open data for most recent bill with extracted title
-      const url = 'https://data.parliament.scot/api/bills/xml';
-
-      try {
-        const response = await fetch(url);
-        const xmlText = await response.text();
-
-        const parser = new DOMParser();
-        const xmlDoc = parser.parseFromString(xmlText, "text/xml");
-
-        const bills = Array.from(xmlDoc.getElementsByTagName("Bill"));
-
-        // Search backwards
-        for (let i = bills.length - 1; i >= 0; i--) {
-          const bill = bills[i];
-          const fullName = bill.getElementsByTagName("FullName")[0]?.textContent.trim();
-
-          if (fullName === title) {
-            let reference = bill.getElementsByTagName("Reference")[0]?.textContent.trim();
-            reference = reference.replace("SP Bill","").trim();
-            return reference;
-          }
-        }
-
-        return null; // No match found
-      } catch (err) {
-        console.error("Error fetching or parsing XML:", err);
-        return null;
-      }
-    }
-
-    async function returnReportPageData(link) {
-      const response = await fetch(link);
-      const html = await response.text();
-      const parser = new DOMParser();
-      const doc = parser.parseFromString(html, "text/html");
-      console.log(doc);
-    }
-
-    async function scrapeData() {
-    // core scraping function for the bill's page
-      if (!htmlContent) {
-        alert("Please load an HTML file first.");
-        return;
-      }
-
-      const parser = new DOMParser();
-      const doc = parser.parseFromString(htmlContent, 'text/html');
-			const billTitle = doc.querySelector('title').textContent.split("|")[0].trim();
-      // scrape common values: bill number & lead committee
-      const billNumber = await findBillReferenceByTitle(billTitle);
-			leadCommittee = "Unknown Committee";
-			const paras = doc.querySelectorAll('p');
-			for (let p of paras) {
-				const text = p.textContent.trim();
-				if (text.includes("The lead committee for this Bill is")) {
-					leadCommittee = p.querySelector('a').textContent;
-					break;
-				}
-			}
-      /* get all blocks of interest as an array:
-          committee proceedings: bills-date-link-block
-          formal bill docs: span.link-block
-          committee reports: a[href^= ... */
-      const blocks = doc.querySelectorAll(`
-          div.bills-date-link-block, 
-          span.link-block,
-          a[href^="https://digitalpublications.parliament.scot/Committees/Report/"]
-        `);
-      // declare key variables
-      const results = [];
-      let link = "" // the scraped hyperlink to the OR, formal bill doc or committee report
-      let date = "" // date of proceedings or publication
-      let reference = "" // citation text for col 2, follows SP official guide to citations
-      let displayName = "" // descriptor for col 1
-      let url = "" // the url to put in col 2
-      // loop all blocks of interest
-      blocks.forEach(block => {
-        // get the bill stage for the current block
-        const stage = getStage(block);
-        // handle commmittee reports
-				if (block.tagName.toLowerCase() === "a") {
-			    url = block.getAttribute('href');
-          returnReportPageData(url);
-          date = '?';
-          reference = block.getAttribute('href');
-          displayName = 'Committee report';
-					results.push({
-						stage,
-          	displayName,
-          	date,
-          	url,
-          	reference
-        	})
-          return;	
-        }
-        const link = block.querySelector('a');
-        if (!link) return;
-        const displayText = link.textContent.trim();
-        url = link.href;
-        let wrongDomain = ""
-        if (url.indexOf('-/media') != -1) {
-          wrongDomain = url.substring(0, url.indexOf('/-/media'))
-          url = url.replace(wrongDomain, "https://www.parliament.scot")
-        } else if (url.indexOf('/official-report/') != -1) {
-          wrongDomain = url.substring(0, url.indexOf('/chamber-and-committees'))
-          url = url.replace(wrongDomain, "https://www.parliament.scot")
-        }
-        // Extract a readable date (e.g., "28 June 2022")
-        const dateMatch = block.textContent.match(/\d{1,2} \w+ \d{4}/);
-        const dateObj = new Date(dateMatch);
-        date = dateObj ? formatAsIsoDateLocal(dateObj) : null;
-				// handle bill documents
-				if (block.className === 'link-block') {
-          // only pull in certain documents
-          const billDocsKeywords = [
-            "Explanatory Notes",
-            "Policy Memorandum",
-            "Financial Memorandum",
-            "Delegated Powers Memorandum",
-            "Groupings",
-            "Marshalled List",
-            "Bill as introduced",
-            "Bill as amended",
-            "Bill as passed"
-            ]
-					const matchedKnownDoc =  billDocsKeywords.some(keyword => displayText.includes(keyword));
-					if (!matchedKnownDoc) {
-						return;
-					}
-          // now sort out display name
-          // get rid of trailing bracketed material
-          displayName = displayText.replace(/\s*\([^()]*\)\s*$/, "");
-          // strip out name of bill for reference
-          let refDisplayName = displayName;
-          const billItselfNames = [
-            "Bill as introduced",
-            "Bill as amended",
-            "Bill as passed",
-          ]
-          const billItself = billItselfNames.some(keyword => displayName.includes(keyword));
-          if (billItself) {
-            refDisplayName = "as " + displayName.split(" as")[1].trim();
-          }
-          // now sort out the reference
-          reference = "SP Bill " + billNumber;
-          if (stage > 1) {
-            reference += getBillNumSuffix(stage - 1,displayName);
-          }
-          const docSuffix = getSuffix(displayName);
-          if (docSuffix != null) {
-            reference += "-" + docSuffix
-          }
-          reference += " " + billTitle;
-          reference += " [" + refDisplayName.toLowerCase() + "] Session 6 (";
-          reference += dateObj.getFullYear() + ")";
-				}
-				// handle committee and chamber meetings
-				if (block.className === 'bills-date-link-block') {
-					if (url.indexOf("official-report") === -1) {
-						return;
-					}
-				// displayName & reference
-          const consideringBody = findConsideringBody(block,stage);
-          displayName = consideringBody + ", " + formatDateToLongString(date);
-          reference = "SP OR " + consideringBody + " " + formatDateToLongString(date); 
-				}
-				
-        const exists = results.some(d => d.displayName === displayName);
-				if (!exists) {
-					results.push({
-						stage,
-          	displayName,
-          	date,
-          	url,
-          	reference
-        	})
-				};
-      });
-
-      // Display formatted JSON
-      document.getElementById('output').textContent = JSON.stringify(results, null, 2);
-    }
+    })
   </script>
-
+  <script>
+     document.getElementById('jsonFileInput').addEventListener('change', function (event) {
+     const file = event.target.files[0];
+     if (!file) return;
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        jsonContent = e.target.result;
+      };
+      reader.readAsText(file);
+    })
+  </script>
 </body>
 </html>
-
